# B6x

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  README.md  Release Notes SDK.docx  release.md  sdk.cmake  sdk6.code-workspace
examples/: CMakeLists.txt
examples/_blank/gnu/: CMakeLists.txt
examples/_blank/mdk/: blank.uvoptx  blank.uvprojx
examples/_blank/src/: cfg.h  main.c
examples/adpcm/gnu/: CMakeLists.txt
examples/adpcm/mdk/: adpcm.uvoptx  adpcm.uvprojx
examples/adpcm/src/: cfg.h  main.c
examples/dmaTest/gnu/: CMakeLists.txt
examples/dmaTest/mdk/: dmaTest.uvoptx  dmaTest.uvprojx
examples/dmaTest/src/: cfg.h  dma_test.c  main.c
examples/extiTest/gnu/: CMakeLists.txt
examples/extiTest/mdk/: extiTest.uvoptx  extiTest.uvprojx
examples/extiTest/src/: cfg.h  main.c
examples/faultTest/gnu/: CMakeLists.txt
examples/faultTest/mdk/: faultTest.uvoptx  faultTest.uvprojx
examples/faultTest/src/: cfg.h  main.c
examples/gfskTest/: ReadMe.txt
examples/gfskTest/mdk/: gfskTest.uvoptx  gfskTest.uvprojx
examples/gfskTest/src/: cfg.h  main.c  proc.c
examples/gpioTest/gnu/: CMakeLists.txt
examples/gpioTest/mdk/: gpioTest.uvguix.PCB  gpioTest.uvoptx  gpioTest.uvprojx
examples/gpioTest/src/: cfg.h  main.c
examples/gsmDecoder/: GSM_DECODER_VERIFICATION.md  GSM_UPDATE_SUMMARY.md  README_GSM_DECODER.md  mp3_to_gsm.py  mp3_to_gsm_README.md  noAudio.gsm  noAudio_2.2.gsm  replace_gsm_data.py
examples/gsmDecoder/gsm-1.0-pl23/: INSTALL  Makefile
examples/gsmDecoder/mdk/: gsmDecode.Windows User  gsmDecoder.uvoptx  gsmDecoder.uvprojx  link_xip.sct
examples/gsmDecoder/src/: audio_data_500hz.c  cfg.h  gsm.c  gsm.h  gsm_audio_data.h  gsm_audio_data.h.backup  main.c  speakerA.c  speakerB.c  startup.s
examples/helixMP3Decoder/: 使用说明.docx
examples/helixMP3Decoder/mdk/: blank.uvoptx  blank.uvprojx  link_xip.sct
examples/helixMP3Decoder/python/: convert2mp3_16KMono.py  convert2mp3_16KMonoWithLenth.py  hex2wav.py  mp3_frame_debugger.py  mp3_info_parser.py  mp3_to_16k_mono_16kbps.py  mp3_to_c_array.py
examples/helixMP3Decoder/src/: cfg.h  main.c  speakerA.c  startup.s
examples/i2cNtag/gnu/: CMakeLists.txt
examples/i2cNtag/mdk/: i2cNtag.uvoptx  i2cNtag.uvprojx
examples/i2cNtag/src/: cfg.h  main.c  ntag.c  ntag.h  ntag_test.c
examples/i2cTest/gnu/: CMakeLists.txt
examples/i2cTest/mdk/: i2cTest.uvoptx  i2cTest.uvprojx
examples/i2cTest/src/: cfg.h  i2c_test.c  main.c
examples/infraredTest/gnu/: CMakeLists.txt
examples/infraredTest/mdk/: infraredTest.uvoptx  infraredTest.uvprojx
examples/infraredTest/src/: cfg.h  main.c
examples/iso7816/gnu/: CMakeLists.txt
examples/iso7816/mdk/: iso7816.uvoptx  iso7816.uvprojx
examples/iso7816/src/: cfg.h  iso7816.c  iso7816.h  main.c
examples/iwdtTest/gnu/: CMakeLists.txt
examples/iwdtTest/mdk/: iwdtTest.uvoptx  iwdtTest.uvprojx
examples/iwdtTest/src/: cfg.h  main.c
examples/ldoTest/gnu/: CMakeLists.txt
examples/ldoTest/mdk/: ldoTest.uvoptx  ldoTest.uvprojx
examples/ldoTest/src/: cfg.h  ldo_test.c  main.c
examples/loader/: loader_bin.bat  ota_firmware.bat
examples/loader/gnu/: CMakeLists.txt  startup_gnu_ld.S
examples/loader/mdk/: link_ld.sct  loader.uvoptx  loader.uvprojx  startup_ld.s
examples/loader/src/: cfg.h  main.c
examples/powerTest/gnu/: CMakeLists.txt
examples/powerTest/mdk/: powerTest.uvoptx  powerTest.uvprojx
examples/powerTest/src/: cfg.h  main.c
examples/pwcTest/gnu/: CMakeLists.txt
examples/pwcTest/mdk/: pwcTest.uvoptx  pwcTest.uvprojx
examples/pwcTest/src/: cfg.h  main.c
examples/pwmSpeaker/gnu/: CMakeLists.txt  link_xip.ld
examples/pwmSpeaker/mdk/: pwmSpeaker.uvoptx  pwmSpeaker.uvprojx
examples/pwmSpeaker/src/: cfg.h  link_xip.sct  main.c  music.h  speakerA.c
examples/pwmTest/gnu/: CMakeLists.txt
examples/pwmTest/mdk/: pwmTest.uvoptx  pwmTest.uvprojx
examples/pwmTest/src/: cfg.h  main.c
examples/pwm_led_ws2812/gnu/: CMakeLists.txt
examples/pwm_led_ws2812/mdk/: pwm_led_ws2812.uvoptx  pwm_led_ws2812.uvprojx
examples/pwm_led_ws2812/src/: cfg.h  main.c  sftmr.c  ws2812.c  ws2812.h
examples/rcoTest/gnu/: CMakeLists.txt
examples/rcoTest/mdk/: rcoTest.uvoptx  rcoTest.uvprojx
examples/rcoTest/src/: cfg.h  main.c  rco_test.c
examples/rtcTest/gnu/: CMakeLists.txt
examples/rtcTest/mdk/: rtcTest.uvoptx  rtcTest.uvprojx
examples/rtcTest/src/: cfg.h  main.c  rtc_test.c
examples/sadcTest/gnu/: CMakeLists.txt
examples/sadcTest/mdk/: sadcTest.uvoptx  sadcTest.uvprojx
examples/sadcTest/src/: cfg.h  main.c  sadc_test.c
examples/sadc_battery/: README.md
examples/sadc_battery/gnu/: CMakeLists.txt
examples/sadc_battery/mdk/: sadc_battery.uvoptx  sadc_battery.uvprojx
examples/sadc_battery/src/: cfg.h  main.c
examples/spiLCD/gnu/: CMakeLists.txt  link_xip_lcd.ld  startup_gnu_lcd.S
examples/spiLCD/mdk/: link_xip.sct  spiLCD.uvoptx  spiLCD.uvprojx
examples/spiLCD/src/: Logo.h  cfg.h  lcd.c  lcd.h  main.c  steam.c
examples/spiMaster/gnu/: CMakeLists.txt
examples/spiMaster/mdk/: spiMst.uvoptx  spiMst.uvprojx
examples/spiMaster/src/: cfg.h  main.c  spim_test.c
examples/spiSlave/gnu/: CMakeLists.txt
examples/spiSlave/mdk/: JLinkSettings.ini  spiSlv.uvoptx  spiSlv.uvprojx
examples/spiSlave/src/: cfg.h  main.c  spis_test.c
examples/stepperMotor/gnu/: CMakeLists.txt
examples/stepperMotor/mdk/: stepperMotor.uvoptx  stepperMotor.uvprojx
examples/stepperMotor/src/: cfg.h  main.c  (+2 more)
mesh/gnu/: CMakeLists.txt
projects/: CMakeLists.txt  clrAll.bat  loadFW.bat
projects/bleFCC/: ReadMe.txt
projects/bleFCC_Store_Config/: ReadMe.txt
projects/bleHid_Uart/: 协议说明.docx
projects/bleMaster/: 指令说明.docx
projects/bleMasterSlave/: 指令说明.docx
projects/bleMesh/: readme.txt
projects/bleOTA/: BxOTA V1.7协议.md  OTA升级流程.docx
projects/bleOTA_Dongle/: Readme.md
projects/bleUartAT/: AT指令说明.docx
projects/bleUartAT-gsmDecodet/: AT_COMMANDS.md  AT_COMMANDS_CN.md
projects/bleUartCMD/: 蓝牙串口透传协议说明书.docx
projects/bleWeChatETC/: 说明.txt
projects/others/: 说明.txt
usb/gnu/: A_cmake_build.cmd  CMakeLists.txt  clean.bat
(+1091 files in other folders)
